--- a/KGERP/Views/Configuration/CommonFinishProduct.cshtml
+++ b/KGERP/Views/Configuration/CommonFinishProduct.cshtml
@@ -2,7 +2,7 @@
 
 @{
 
-    ViewData["Title"] = "Material Iteam Entry";
+    ViewData["Title"] = "Material Item Entry";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 
@@ -16,11 +16,11 @@
 </style>
 <section class="content-header">
     <h1>
-        Material Iteam Entry
+        Material Item Entry
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Material Iteam Entry</li>
+        <li class="active">Material Item Entry</li>
     </ol>
 </section>
 <section class="content">
