--- a/KGERP/Views/BillRequisition/QSBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/QSBRApproveSlave.cshtml
@@ -180,11 +180,9 @@
                                         <tr class="bg-gray">
                                             @foreach (var item in Model.ApprovalModelList)
                                             {
-                                                @*<th style="padding:5px;text-align:center;">@item.SignatoryName</th>*@
                                                 <th style="padding:5px;text-align:center;">
-                                                    @((item.SignatoryName == "QS") ? "QS/ Head/ IT / Engineer" : item.SignatoryName)
+                                                    @((item.SignatoryName == "QS") ? "QS/ Engr./ HOD" : item.SignatoryName)
                                                 </th>
-
                                             }
                                         </tr>
                                         <tr>
@@ -194,16 +192,12 @@
                                                 {
                                                     <td style="text-align:center">
                                                         <span class="btn btn-warning btn-xs"> @item.AprrovalStatusName</span>
-
                                                     </td>
-
-
                                                 }
                                                 else if (item.AprrovalStatusId == (int)EnumBillRequisitionStatus.Rejected)
                                                 {
                                                     <td style="text-align:center">
                                                         <span class="btn btn-danger btn-xs"> @item.AprrovalStatusName</span>
-
                                                     </td>
                                                 }
                                                 else if (item.AprrovalStatusId == (int)EnumBillRequisitionStatus.Approved)
@@ -234,14 +228,11 @@
                                                         {
                                                             <span class="btn btn-success btn-xs"> Approved</span>
                                                         }
-
                                                     </td>
-
                                                 }
                                                 else
                                                 {
                                                     <td style="padding:5px; text-align:center;">@item.AprrovalStatusName</td>
-
                                                 }
                                             }
                                         </tr>
@@ -250,7 +241,6 @@
 
                                 </div>
                             </div>
-
                         }
                     </div>
 
@@ -294,31 +284,59 @@
         });
 
         function recalculateTotals() {
-            var total = 0;
 
             $('#itemTable tbody tr').each(function () {
-                var demandQty = parseFloat($(this).find('.demandQty').val());
-                var unitRate = parseFloat($(this).find('.unitRate').text());
+                var demandQtyInput = $(this).find('.demandQty');
+                var unitRateInput = $(this).find('.unitRate');
                 var remainingQty = parseFloat($(this).find('.remainingQty').text());
+                var linetotal = parseFloat($(this).find('.lineTotal').text());
 
-                if (!isNaN(demandQty) && !isNaN(unitRate)) {
-                    if (demandQty > remainingQty) {
-                        // Update the input or show an error message indicating exceeding remaining quantity
-                        // For demonstration, I'm setting the value to remainingQty
-                        $(this).find('.demandQty').val(remainingQty);
-                        demandQty = remainingQty; // Update demandQty to remainingQty
+                demandQtyInput.on('input', function (event) {
+                    var demandQty = parseFloat(demandQtyInput.val());
+                    var unitRate = parseFloat(unitRateInput.val());
+
+                    if (!isNaN(demandQty) && !isNaN(unitRate)) {
+                        if (demandQty > remainingQty) {
+                            demandQtyInput.val(remainingQty);
+                            demandQty = remainingQty;
+                        }
+
+                        lineTotal = demandQty * unitRate;
+
+                        $('.lineTotal').text(lineTotal.toFixed(2));
                     }
+                    totalCount();
+                });
 
-                    var lineTotal = demandQty * unitRate;
+                unitRateInput.on('input', function (event) {
+                    var demandQty = parseFloat(demandQtyInput.val());
+                    var unitRate = parseFloat(unitRateInput.val());
 
-                    $(this).find('.lineTotal').text(lineTotal.toFixed(2));
-                    total += lineTotal;
-                }
+                    if (!isNaN(demandQty) && !isNaN(unitRate)) {
+                        if (demandQty > remainingQty) {
+                            demandQtyInput.val(remainingQty);
+                            demandQty = remainingQty;
+                        }
+
+                        lineTotal = demandQty * unitRate;
+
+                        $('.lineTotal').text(lineTotal.toFixed(2));
+                    }
+                    totalCount();
+                });
             });
-
-            $('#total').text(total.toFixed(2));
+            totalCount();
         }
 
+        function totalCount() {
+            var total = 0;
+            $('#itemTable tbody tr').each(function () {
+                var linetotal = parseFloat($(this).find('.lineTotal').text());
+                total += linetotal;
+            });
+
+            $("#total").text(total.toFixed(2));
+        }
 
     </script>
 }
