--- a/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
@@ -181,11 +181,9 @@
                                         <tr class="bg-gray">
                                             @foreach (var item in Model.ApprovalModelList)
                                             {
-                                                @*<th style="padding:5px;text-align:center;">@item.SignatoryName</th>*@
                                                 <th style="padding:5px;text-align:center;">
-                                                    @((item.SignatoryName == "QS") ? "QS/ Head/ IT / Engineer" : item.SignatoryName)
+                                                    @((item.SignatoryName == "QS") ? "QS/ Engr./ HOD" : item.SignatoryName)
                                                 </th>
-
                                             }
                                         </tr>
                                         <tr>
@@ -195,16 +193,12 @@
                                                 {
                                                     <td style="text-align:center">
                                                         <span class="btn btn-warning btn-xs"> @item.AprrovalStatusName</span>
-
                                                     </td>
-
-
                                                 }
                                                 else if (item.AprrovalStatusId == (int)EnumBillRequisitionStatus.Rejected)
                                                 {
                                                     <td style="text-align:center">
                                                         <span class="btn btn-danger btn-xs"> @item.AprrovalStatusName</span>
-
                                                     </td>
                                                 }
                                                 else if (item.AprrovalStatusId == (int)EnumBillRequisitionStatus.Approved)
@@ -212,7 +206,6 @@
                                                     <td style="text-align:center">
                                                         @if (item.SignatoryId == (int)EnumBRequisitionSignatory.Initiator)
                                                         {
-
                                                             <span class="btn btn-success btn-xs"> Prepared</span>
                                                         }
                                                         else if (item.SignatoryId == (int)EnumBRequisitionSignatory.PM)
@@ -235,23 +228,17 @@
                                                         {
                                                             <span class="btn btn-success btn-xs"> Approved</span>
                                                         }
-
                                                     </td>
-
                                                 }
                                                 else
                                                 {
                                                     <td style="padding:5px; text-align:center;">@item.AprrovalStatusName</td>
-
                                                 }
                                             }
                                         </tr>
-
                                     </table>
-
                                 </div>
                             </div>
-
                         }
                     </div>
 
@@ -265,7 +252,6 @@
                                     <a href="~/BillRequisition/PMReject?billRequisitionMasterId=@Model.BillRequisitionMasterId" class="btn btn-danger btn-block">
                                         Reject
                                     </a>
-
                                 </div>
                                 <div class="col-md-3">
                                     <button type="submit" id="btnSave" class="btn btn-primary btn-block">Approve</button>
@@ -285,7 +271,6 @@
 
 @section scripts {
 
-
     <script>
         $(document).ready(function () {
             recalculateTotals();
@@ -296,29 +281,59 @@
         });
 
         function recalculateTotals() {
-            var total = 0;
 
             $('#itemTable tbody tr').each(function () {
-                var demandQty = parseFloat($(this).find('.demandQty').val());
-                var unitRate = parseFloat($(this).find('.unitRate').text());
+                var demandQtyInput = $(this).find('.demandQty');
+                var unitRateInput = $(this).find('.unitRate');
                 var remainingQty = parseFloat($(this).find('.remainingQty').text());
+                var linetotal = parseFloat($(this).find('.lineTotal').text());
 
-                if (!isNaN(demandQty) && !isNaN(unitRate)) {
-                    if (demandQty > remainingQty) {
-                        // Update the input or show an error message indicating exceeding remaining quantity
-                        // For demonstration, I'm setting the value to remainingQty
-                        $(this).find('.demandQty').val(remainingQty);
-                        demandQty = remainingQty; // Update demandQty to remainingQty
+                demandQtyInput.on('input', function (event) {
+                    var demandQty = parseFloat(demandQtyInput.val());
+                    var unitRate = parseFloat(unitRateInput.val());
+
+                    if (!isNaN(demandQty) && !isNaN(unitRate)) {
+                        if (demandQty > remainingQty) {
+                            demandQtyInput.val(remainingQty);
+                            demandQty = remainingQty;
+                        }
+
+                        lineTotal = demandQty * unitRate;
+
+                        $('.lineTotal').text(lineTotal.toFixed(2));
                     }
+                    totalCount();
+                });
 
-                    var lineTotal = demandQty * unitRate;
+                unitRateInput.on('input', function (event) {
+                    var demandQty = parseFloat(demandQtyInput.val());
+                    var unitRate = parseFloat(unitRateInput.val());
 
-                    $(this).find('.lineTotal').text(lineTotal.toFixed(2));
-                    total += lineTotal;
-                }
+                    if (!isNaN(demandQty) && !isNaN(unitRate)) {
+                        if (demandQty > remainingQty) {
+                            demandQtyInput.val(remainingQty);
+                            demandQty = remainingQty;
+                        }
+
+                        lineTotal = demandQty * unitRate;
+
+                        $('.lineTotal').text(lineTotal.toFixed(2));
+                    }
+                    totalCount();
+                });
+            });
+            totalCount();
+        }
+
+        function totalCount() {
+            var total = 0;
+            $('#itemTable tbody tr').each(function () {
+                var linetotal = parseFloat($(this).find('.lineTotal').text());
+                total += linetotal;
             });
 
-            $('#total').text(total.toFixed(2));
+            $("#total").text(total.toFixed(2));
         }
+
     </script>
 }
