--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -728,16 +728,16 @@
         $(document).ready(function () {
             'use strict';
 
-            $("#ddlCostCenterId").empty();
+            //$("#ddlCostCenterId").empty();
             $("#ddlCostCenterId").append("<option selected disabled>===Select Project Type First===</option>");
 
-            $("#ddlDivisionId").empty();
+            //$("#ddlDivisionId").empty();
             $("#ddlDivisionId").append("<option selected disabled>===Select Project First===</option>");
 
-            $("#ddlBOQItemId").empty();
+            //$("#ddlBOQItemId").empty();
             $("#ddlBOQItemId").append("<option selected disabled>===Select Division First===</option>");
 
-            $("#ddlRequisitionItemId").empty();
+            //$("#ddlRequisitionItemId").empty();
             $("#ddlRequisitionItemId").append("<option selected disabled>===Select BoQ First===</option>");
 
             $('#datePickerById').datepicker({
