--- a/KGERP/Views/Configuration/CommonRawProduct.cshtml
+++ b/KGERP/Views/Configuration/CommonRawProduct.cshtml
@@ -3,7 +3,7 @@
 @using KG.Core.Services
 @{
 
-    ViewData["Title"] = "Raw Materials";
+    ViewData["Title"] = "New Material Item";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 
@@ -17,11 +17,11 @@
 </style>
 <section class="content-header">
     <h1>
-        Raw Materials
+        New Material Item
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Raw Materials</li>
+        <li class="active">New Material Item</li>
     </ol>
 </section>
 <section class="content">
@@ -41,72 +41,40 @@
                             @Html.HiddenFor(model => model.ID, new { id = "productId" })
                             @Html.HiddenFor(model => model.ActionId, new { id = "ActionId" })
                             @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
+                            <input type="hidden" id="txtCategoryName" name="CategoryName" value="Requisition Item" />
+                            <input type="hidden" id="ddlCommonProductCategoryFk" name="Common_ProductCategoryFk" value="1" />
+                            <input type="hidden" id="ddlCommonProductSubCategoryFk" name="Common_ProductSubCategoryFk" value="1" />
+                            <input type="hidden" id="txtMRPPrice" name="MRPPrice" value="0.0" />
+                            <input type="hidden" id="txtTPPrice" name="TPPrice" value="0.0" />
 
                             <div class="row">
 
-
-                                <div class="col-md-3">
-                                    <div class="form-group" style="padding:0px">
-                                        <label for="message-text" class="col-form-label">Category:</label>
-                                        @Html.EditorFor(model => model.CategoryName, new { htmlAttributes = new { @autocomplete = "on", @class = "form-control", @name = "Brand", @id = "txtCategoryName" } })
-
-                                        @Html.HiddenFor(model => model.Common_ProductCategoryFk, new { id = "ddlCommonProductCategoryFk" })
-                                        @Html.ValidationMessageFor(model => model.Common_ProductCategoryFk, "", new { @class = "text-danger" })
+                                <div class="col-md-6">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label for="message-text" class="col-form-label">Item/Material Name :</label>
+                                            @Html.TextBoxFor(model => model.Name, new { id = "txtProductName", @class = "form-control", @placeholder = "Product Name", required = "required" })
+                                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                        </div>
                                     </div>
 
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label for="message-text" class="col-form-label">Select Unit:</label>
+                                            @{var orderedUnitList = Model.UnitList.OrderBy(order => order.Text).ToList();}
+                                            @Html.DropDownListFor(model => model.Common_UnitFk, new SelectList(orderedUnitList, "Value", "Text"), "===Select Unit===", new { id = "ddlCommonUnitFk", @class = "form-control", required = "required" })
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-md-3">
+
+                                <div class="col-md-6" style="margin-top: 25px !important">
                                     <div class="form-group">
-                                        @if (Model.CompanyFK == 24)
-                                        {
-                                            <label for="message-text" class="col-form-label">Origin Name (Variety):</label>
-                                        }
-                                        else
-                                        {
-                                            <label for="message-text" class="col-form-label">Subcategory:</label>
-                                        }
-
-                                        @Html.DropDownListFor(model => model.Common_ProductSubCategoryFk, Model.ProductSubCategoryList as SelectList, "---Select Subcategory---", new { id = "ddlCommonProductSubCategoryFk", @class = "form-control", required = "required" })
-                                        @Html.ValidationMessageFor(model => model.Common_ProductSubCategoryFk, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        @if (Model.CompanyFK == 24)
-                                        {
-                                            <label for="message-text" class="col-form-label">Pack Size:</label>
-                                        }
-                                        else
-                                        {
-                                            <label for="message-text" class="col-form-label">Origin Name (Variety):</label>
-                                        }
-                                        @Html.TextBoxFor(model => model.Name, new { id = "txtProductName", @class = "form-control", @placeholder = "Materials Name", required = "required" })
-                                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label for="message-text" class="col-form-label">Unit:</label>
-                                        @Html.DropDownListFor(model => model.Common_UnitFk, Model.UnitList as SelectList, "---Select Unit---", new { id = "ddlCommonUnitFk", @class = "form-control", required = "required" })
-                                        @Html.ValidationMessageFor(model => model.Common_UnitFk, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-
-                                <div class="col-md-3">
-                                    <div class="form-group" style="padding:0px">
-                                        <label for="message-text" class="col-form-label">Trade Price:</label>
-                                        @Html.EditorFor(model => model.TPPrice, new { htmlAttributes = new { @autocomplete = "off", @class = "form-control", @id = "txtTradePrice" } })
-                                        @Html.ValidationMessageFor(model => model.TPPrice, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-
-                                <div class="col-md-3">
-                                    <div class="form-group" style="padding:0px">
-                                        <label for="message-text" class="col-form-label">Sale Price:</label>
-                                        @Html.EditorFor(model => model.MRPPrice, new { htmlAttributes = new { @autocomplete = "off", @class = "form-control", @id = "txtSalePrice" } })
-                                        @Html.ValidationMessageFor(model => model.MRPPrice, "", new { @class = "text-danger" })
+                                        <div class="col-md-6">
+                                            <button type="button" onclick="resetForm()" class="btn btn-secondary btn-block" data-dismiss="modal">Reset</button>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <button type="submit" id="btnSave" class="btn btn-primary btn-block"><i class='fa fa-plus'></i> Add</button>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -129,16 +97,6 @@
                                         </div>
                                     </div>
                                 </div>*@
-
-                            <div class="form-group">
-                                <div class="col-md-3">
-                                    @*<button type="button" onclick="resetForm()" class="btn btn-secondary" data-dismiss="modal">Reset</button>*@
-                                </div>
-                                <div class="col-md-9">
-                                    <button type="submit" id="btnSave" class="btn btn-primary btn-block"><i class='fa fa-plus'></i> Add</button>
-                                </div>
-
-                            </div>
                         </div>
                         <div class="box-footer">
                         </div>
@@ -156,7 +114,7 @@
                                                     <th>
                                                         Category
                                                     </th>
-                                                    @if (Model.CompanyFK == 24)
+                                                    @*@if (Model.CompanyFK == 24)
                                                     {
                                                         <th>
                                                             Origin Name (Variety):
@@ -173,17 +131,17 @@
                                                         <th>
                                                             Origin Name (Variety)
                                                         </th>
-                                                    }
+                                                    }*@
 
                                                     <th>
                                                         Unit
                                                     </th>
-                                                    <th style="text-align:right">
+                                                    @*<th style="text-align:right">
                                                         Trade Price
                                                     </th>
                                                     <th style="text-align:right">
                                                         Sale Price
-                                                    </th>
+                                                    </th>*@
                                                     <th>Action</th>
                                                 </tr>
                                             </thead>
@@ -202,27 +160,24 @@
                                                                 @item.CategoryName
                                                             </td>
                                                             <td>
-                                                                @item.SubCategoryName
-                                                            </td>
-                                                            <td>
                                                                 @item.Name
                                                             </td>
                                                             <td>
                                                                 @item.UnitName
                                                             </td>
-                                                            <td style="text-align:right">
+                                                            @*<td style="text-align:right">
                                                                 @item.TPPrice
                                                             </td>
                                                             <td style="text-align:right">
                                                                 @item.MRPPrice
-                                                            </td>
+                                                            </td>*@
                                                             <td>
                                                                 <a id="@item.ID" onclick=" makeEditble(@item.ID);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
                                                                 <a id="@item.ID" onclick="makeDeletable(@item.ID);" class="linkPointer" data-toggle="modal" data-target="#deleteModal" title="Delete"
                                                                    data-placement="top">
                                                                     <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
                                                                 </a>
-                                                                <a href="~/Warehouse/WareHouseRawProductInventoryDetails?companyId=@Model.CompanyFK&productId=@item.ID">Ledger</a>
+                                                                @*<a href="~/Warehouse/WareHouseRawProductInventoryDetails?companyId=@Model.CompanyFK&productId=@item.ID">Ledger</a>*@
                                                             </td>
                                                         </tr>
                                                     }
@@ -243,10 +198,6 @@
         </div>
     </div>
 </section>
-
-
-
-
 
 @using (Html.BeginForm("CommonRawProduct", "Configuration", FormMethod.Post, new { id = "commonProductFormId", @class = "formValidator", @enctype = "multipart/form-data" }))
 {
