--- a/KGERP/Views/Configuration/CommonRawProduct.cshtml
+++ b/KGERP/Views/Configuration/CommonRawProduct.cshtml
@@ -111,37 +111,8 @@
                                             <thead>
                                                 <tr>
                                                     <th>SL</th>
-                                                    <th>
-                                                        Category
-                                                    </th>
-                                                    @*@if (Model.CompanyFK == 24)
-                                                    {
-                                                        <th>
-                                                            Origin Name (Variety):
-                                                        </th>
-                                                        <th>
-                                                            Pack Size
-                                                        </th>
-                                                    }
-                                                    else
-                                                    {
-                                                        <th>
-                                                            SubCategory
-                                                        </th>
-                                                        <th>
-                                                            Origin Name (Variety)
-                                                        </th>
-                                                    }*@
-
-                                                    <th>
-                                                        Unit
-                                                    </th>
-                                                    @*<th style="text-align:right">
-                                                        Trade Price
-                                                    </th>
-                                                    <th style="text-align:right">
-                                                        Sale Price
-                                                    </th>*@
+                                                    <th>Material Name</th>
+                                                    <th>Unit Name</th>
                                                     <th>Action</th>
                                                 </tr>
                                             </thead>
@@ -157,20 +128,11 @@
                                                         <tr>
                                                             <td>@(++sl)</td>
                                                             <td>
-                                                                @item.CategoryName
-                                                            </td>
-                                                            <td>
                                                                 @item.Name
                                                             </td>
                                                             <td>
                                                                 @item.UnitName
                                                             </td>
-                                                            @*<td style="text-align:right">
-                                                                @item.TPPrice
-                                                            </td>
-                                                            <td style="text-align:right">
-                                                                @item.MRPPrice
-                                                            </td>*@
                                                             <td>
                                                                 <a id="@item.ID" onclick=" makeEditble(@item.ID);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
                                                                 <a id="@item.ID" onclick="makeDeletable(@item.ID);" class="linkPointer" data-toggle="modal" data-target="#deleteModal" title="Delete"
